--- a/flip.html
+++ b/flip.html
@@ -83,13 +83,18 @@
     <button id="previous">Previous page</button>
     <button id="next">Next page</button>
 
+    <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     <script type="text/javascript">
       var pages = document.querySelectorAll('.page');
+      var currentPage = 1;
       for (var i = pages.length - 1; i >= 0; i--) {
         pages[i].style.zIndex = 1000 - i;
       }
-
-      var currentPage = 1;
+      $('.page').bind('webkitTransitionEnd', function() {
+        if(!$(this).hasClass('flipped')) {
+          $(this).css("zIndex", 1000 - currentPage + 1);
+        }
+      });   
 
       var next = document.querySelector('#next');
       next.addEventListener('click', function(e) {
@@ -109,7 +114,6 @@
         currentPage = currentPage - 1;
 
         var page = document.querySelectorAll('.page');
-        page[currentPage - 1].style.zIndex = 1000 - currentPage + 1;
         page[currentPage - 1].classList.remove('flipped');
       }, false);
     </script>
